[gd_scene load_steps=26 format=2]

[ext_resource path="res://fonts/Merriweather-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://plants/effects/slash.png" type="Texture" id=2]
[ext_resource path="res://plants/heart_marker.svg" type="Texture" id=3]
[ext_resource path="res://plants/Plant.gd" type="Script" id=4]
[ext_resource path="res://plants/plant1/growth_1.svg" type="Texture" id=5]
[ext_resource path="res://plants/defense_marker.svg" type="Texture" id=6]
[ext_resource path="res://plants/plant1/growth_3_more_simple.svg" type="Texture" id=7]
[ext_resource path="res://plants/plant1/growth_2.svg" type="Texture" id=8]
[ext_resource path="res://plants/water_marker.svg" type="Texture" id=9]
[ext_resource path="res://plants/effects/growth_particle.svg" type="Texture" id=10]
[ext_resource path="res://plants/plant1/seeds.svg" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 21
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.658824, 0.658824, 0.658824, 0.501961 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id=14]
resource_name = "Delay"
length = 0.3

[sub_resource type="Animation" id=4]
resource_name = "NoWater"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("NoWater:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("H/HeartMarker:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.65, 0.8, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 64 ), Vector2( 64, 64 ), Vector2( 64, 64 ), Vector2( 64, 48 ), Vector2( 64, 64 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dec_health"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NoWater:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 36 ), Vector2( 0, 20 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "OutOfHealth"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("H:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("W:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Plant:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Plant:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 64 ), Vector2( 64, 80 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "PlantIsDone"
tracks/0/type = "method"
tracks/0/path = NodePath("PlantCollectParticles")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("H:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("W:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Plant:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "popup_menu"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NoWater:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("H/HeartMarker:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 64 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NoWater:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("W/WaterMarker:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 64 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("H:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("W:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("D:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Plant:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Slash:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Plant:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Plant:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 64 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Slash"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("H/HeartMarker:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.25, 0.4, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 64 ), Vector2( 64, 48 ), Vector2( 64, 64 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dec_health"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Slash:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "WaterPlant"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("W/WaterMarker:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 64 ), Vector2( 64, 48 ), Vector2( 64, 64 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "water_plant"
}, {
"args": [  ],
"method": "update_markers_visibility"
}, {
"args": [  ],
"method": "upgrade_plant"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("PlantUpgradeParticles")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 3.37167, 0, 0, Vector2( 0.428571, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.54387, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.348624, 0.986239 )
colors = PoolColorArray( 1, 1, 1, 1, 0.546414, 1, 0.564132, 1, 0.375297, 0.703125, 0.388102, 1 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.411661, 0.986239 )
colors = PoolColorArray( 0, 0.480469, 0.142639, 1, 0.546414, 1, 0.564132, 1, 1, 1, 1, 0.290196 )

[node name="Plant" type="Node2D" groups=["Object", "Plant"]]
script = ExtResource( 4 )

[node name="Plant" type="AnimatedSprite" parent="."]
position = Vector2( 64, 64 )
frames = SubResource( 9 )

[node name="H" type="Node2D" parent="."]

[node name="HeartMarker" type="Sprite" parent="H"]
position = Vector2( 64, 64 )
texture = ExtResource( 3 )

[node name="HealthNum" type="Label" parent="H/HeartMarker"]
margin_left = -57.0
margin_top = 18.0
margin_right = -21.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "3"
align = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="W" type="Node2D" parent="."]

[node name="WaterMarker" type="Sprite" parent="W"]
position = Vector2( 64, 64 )
texture = ExtResource( 9 )

[node name="WaterNum" type="Label" parent="W/WaterMarker"]
margin_left = -23.0
margin_top = 25.0
margin_right = 29.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="D" type="Node2D" parent="."]

[node name="DefenseMarker" type="Sprite" parent="D"]
position = Vector2( 64, 64 )
texture = ExtResource( 6 )

[node name="DefenseNum" type="Label" parent="D/DefenseMarker"]
margin_left = 17.0
margin_top = 21.0
margin_right = 69.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="NoWater" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_top = 20.0
margin_right = 126.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "No Water!"
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/Delay = SubResource( 14 )
anims/NoWater = SubResource( 4 )
anims/OutOfHealth = SubResource( 13 )
anims/PlantIsDone = SubResource( 10 )
anims/RESET = SubResource( 5 )
anims/Slash = SubResource( 12 )
anims/WaterPlant = SubResource( 6 )

[node name="PlantUpgradeParticles" type="CPUParticles2D" parent="."]
position = Vector2( 61, 62 )
z_index = 5
emitting = false
amount = 64
lifetime = 0.6
one_shot = true
explosiveness = 0.7
texture = ExtResource( 10 )
emission_shape = 1
emission_sphere_radius = 16.57
spread = 180.0
gravity = Vector2( 0, -30 )
initial_velocity = 150.0
angular_velocity = -107.03
angular_velocity_random = 1.0
damping = 100.0
damping_random = 1.0
angle = 360.0
angle_random = 1.0
scale_amount = 0.8
scale_amount_random = 1.0
scale_amount_curve = SubResource( 7 )
color_ramp = SubResource( 8 )

[node name="PlantCollectParticles" type="CPUParticles2D" parent="."]
position = Vector2( 61, 62 )
z_index = 20
emitting = false
amount = 64
lifetime = 0.8
one_shot = true
explosiveness = 0.7
texture = ExtResource( 10 )
emission_shape = 1
emission_sphere_radius = 32.0
spread = 180.0
gravity = Vector2( 0, -200 )
initial_velocity = 150.0
angular_velocity = -107.03
angular_velocity_random = 1.0
damping = 100.0
damping_random = 1.0
angle = 360.0
angle_random = 1.0
scale_amount = 0.8
scale_amount_random = 1.0
scale_amount_curve = SubResource( 7 )
color_ramp = SubResource( 11 )

[node name="Slash" type="Sprite" parent="."]
position = Vector2( 64, 64 )
z_index = 10
texture = ExtResource( 2 )
hframes = 7
